:lipstick: Style: 메인페이지 부스, 배너  크기 조정

--- a/src/components/Main/swiper.css
+++ b/src/components/Main/swiper.css
@@ -21,7 +21,7 @@
 }
 
 .transparent-image {
-  opacity: 0.2; /* 원하는 투명도 값을 설정합니다. 0.7은 70% 투명을 나타냅니다. */
+  opacity: 0.2;
 }
 
 .swiper-pagination {
